; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/etnaviv/extr_etnaviv_buffer.c_CMD_LOAD_STATE.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/etnaviv/extr_etnaviv_buffer.c_CMD_LOAD_STATE.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.etnaviv_cmdbuf = type { i32 }

@VIV_FE_LOAD_STATE_HEADER_OFFSET__SHR = common dso_local global i32 0, align 4
@VIV_FE_LOAD_STATE_HEADER_OP_LOAD_STATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.etnaviv_cmdbuf*, i32, i32)* @CMD_LOAD_STATE to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CMD_LOAD_STATE(%struct.etnaviv_cmdbuf* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.etnaviv_cmdbuf*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.etnaviv_cmdbuf* %0, %struct.etnaviv_cmdbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @VIV_FE_LOAD_STATE_HEADER_OFFSET__SHR, align 4
  %10 = ashr i32 %8, %9
  store i32 %10, i32* %7, align 4
  %11 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %12 = getelementptr inbounds %struct.etnaviv_cmdbuf, %struct.etnaviv_cmdbuf* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @ALIGN(i32 %13, i32 8)
  %15 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %16 = getelementptr inbounds %struct.etnaviv_cmdbuf, %struct.etnaviv_cmdbuf* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  %17 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %18 = load i32, i32* @VIV_FE_LOAD_STATE_HEADER_OP_LOAD_STATE, align 4
  %19 = call i32 @VIV_FE_LOAD_STATE_HEADER_COUNT(i32 1)
  %20 = or i32 %18, %19
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @VIV_FE_LOAD_STATE_HEADER_OFFSET(i32 %21)
  %23 = or i32 %20, %22
  %24 = call i32 @OUT(%struct.etnaviv_cmdbuf* %17, i32 %23)
  %25 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @OUT(%struct.etnaviv_cmdbuf* %25, i32 %26)
  ret void
}

declare dso_local i32 @ALIGN(i32, i32) #1

declare dso_local i32 @OUT(%struct.etnaviv_cmdbuf*, i32) #1

declare dso_local i32 @VIV_FE_LOAD_STATE_HEADER_COUNT(i32) #1

declare dso_local i32 @VIV_FE_LOAD_STATE_HEADER_OFFSET(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
